✅ New Design ✅ Fixing Design ✅ Check Today 📝 Connect Database

--- a/WabiSabiTeamProject/Feature/Activity/View/Base.lproj/Main.storyboard
+++ b/WabiSabiTeamProject/Feature/Activity/View/Base.lproj/Main.storyboard
@@ -11,9 +11,6 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <array key="SF-Pro-Rounded-Bold.otf">
-            <string>SFProRounded-Bold</string>
-        </array>
         <array key="SF-Pro-Rounded-Regular.otf">
             <string>SFProRounded-Regular</string>
         </array>
@@ -354,41 +351,58 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LWE-6P-4SW">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="300"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZXx-jc-WZd">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="813"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Under Maintenance" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MQu-lI-OKs">
-                                        <rect key="frame" x="20" y="100" width="303.33333333333331" height="40"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XH1-ta-RK9">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="700"/>
+                                        <subviews>
+                                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w8G-CB-Ybo">
+                                                <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                                <color key="barTintColor" name="ColorCream"/>
+                                                <items>
+                                                    <navigationItem title="Summary" id="qlg-8C-edI"/>
+                                                </items>
+                                            </navigationBar>
+                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="G6T-HH-Fmv">
+                                                <rect key="frame" x="0.0" y="44" width="414" height="656"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </tableView>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="40" id="pcV-Un-dd2"/>
+                                            <constraint firstItem="G6T-HH-Fmv" firstAttribute="top" secondItem="w8G-CB-Ybo" secondAttribute="bottom" id="2Nv-pO-GVh"/>
+                                            <constraint firstItem="w8G-CB-Ybo" firstAttribute="leading" secondItem="XH1-ta-RK9" secondAttribute="leading" id="Cdu-ht-GMt"/>
+                                            <constraint firstAttribute="height" constant="700" id="RHp-fh-Es7"/>
+                                            <constraint firstAttribute="trailing" secondItem="w8G-CB-Ybo" secondAttribute="trailing" id="SMX-hq-adu"/>
+                                            <constraint firstItem="w8G-CB-Ybo" firstAttribute="top" secondItem="XH1-ta-RK9" secondAttribute="top" id="YRX-BL-DoV"/>
+                                            <constraint firstItem="G6T-HH-Fmv" firstAttribute="leading" secondItem="XH1-ta-RK9" secondAttribute="leading" id="cqB-VQ-K3P"/>
+                                            <constraint firstAttribute="trailing" secondItem="G6T-HH-Fmv" secondAttribute="trailing" id="hyX-yH-22d"/>
+                                            <constraint firstAttribute="bottom" secondItem="G6T-HH-Fmv" secondAttribute="bottom" id="l1X-vS-rqD"/>
+                                            <constraint firstItem="G6T-HH-Fmv" firstAttribute="top" secondItem="w8G-CB-Ybo" secondAttribute="bottom" id="t6d-B9-GcZ"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" name="SFProRounded-Bold" family="SF Pro Rounded" pointSize="34"/>
-                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    </view>
                                 </subviews>
-                                <color key="backgroundColor" name="ColorPrimary"/>
                                 <constraints>
-                                    <constraint firstItem="MQu-lI-OKs" firstAttribute="top" secondItem="LWE-6P-4SW" secondAttribute="top" constant="100" id="8q7-Hm-l0j"/>
-                                    <constraint firstItem="MQu-lI-OKs" firstAttribute="leading" secondItem="LWE-6P-4SW" secondAttribute="leading" constant="20" id="Du7-fM-NGr"/>
-                                    <constraint firstAttribute="height" constant="300" id="si3-4d-xN9"/>
+                                    <constraint firstAttribute="trailing" secondItem="XH1-ta-RK9" secondAttribute="trailing" id="4x5-uh-CHL"/>
+                                    <constraint firstItem="XH1-ta-RK9" firstAttribute="top" secondItem="ZXx-jc-WZd" secondAttribute="top" id="N73-Yd-OKH"/>
+                                    <constraint firstItem="XH1-ta-RK9" firstAttribute="leading" secondItem="ZXx-jc-WZd" secondAttribute="leading" id="Oeb-Ap-k8l"/>
+                                    <constraint firstItem="XH1-ta-RK9" firstAttribute="top" secondItem="ZXx-jc-WZd" secondAttribute="top" id="X7j-0j-SdH"/>
+                                    <constraint firstAttribute="bottom" secondItem="XH1-ta-RK9" secondAttribute="bottom" id="XP5-Ct-XOO"/>
+                                    <constraint firstItem="XH1-ta-RK9" firstAttribute="centerX" secondItem="ZXx-jc-WZd" secondAttribute="centerX" id="aDw-Sp-WLQ"/>
+                                    <constraint firstAttribute="bottom" secondItem="XH1-ta-RK9" secondAttribute="bottom" id="nCf-CZ-U4X"/>
+                                    <constraint firstItem="XH1-ta-RK9" firstAttribute="leading" secondItem="ZXx-jc-WZd" secondAttribute="leading" id="rvE-Lm-ABT"/>
+                                    <constraint firstAttribute="trailing" secondItem="XH1-ta-RK9" secondAttribute="trailing" id="t7C-XD-QGJ"/>
                                 </constraints>
-                            </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="G6T-HH-Fmv">
-                                <rect key="frame" x="0.0" y="200" width="414" height="613"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </tableView>
+                            </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="O5B-49-pMM"/>
-                        <color key="backgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" name="ColorCream"/>
                         <constraints>
-                            <constraint firstItem="O5B-49-pMM" firstAttribute="trailing" secondItem="G6T-HH-Fmv" secondAttribute="trailing" id="4sM-J2-WO4"/>
-                            <constraint firstItem="G6T-HH-Fmv" firstAttribute="leading" secondItem="O5B-49-pMM" secondAttribute="leading" id="D5u-Fh-eov"/>
-                            <constraint firstItem="LWE-6P-4SW" firstAttribute="leading" secondItem="O5B-49-pMM" secondAttribute="leading" id="LAo-ix-MDo"/>
-                            <constraint firstItem="O5B-49-pMM" firstAttribute="bottom" secondItem="G6T-HH-Fmv" secondAttribute="bottom" id="N9S-2y-YFZ"/>
-                            <constraint firstItem="G6T-HH-Fmv" firstAttribute="top" secondItem="0FY-7o-Nn5" secondAttribute="top" constant="200" id="fJS-6d-9Xa"/>
-                            <constraint firstItem="O5B-49-pMM" firstAttribute="trailing" secondItem="LWE-6P-4SW" secondAttribute="trailing" id="o6v-2j-Sm6"/>
-                            <constraint firstItem="LWE-6P-4SW" firstAttribute="top" secondItem="0FY-7o-Nn5" secondAttribute="top" id="yiy-4I-i9J"/>
+                            <constraint firstItem="ZXx-jc-WZd" firstAttribute="top" secondItem="0FY-7o-Nn5" secondAttribute="top" id="JI0-hC-eao"/>
+                            <constraint firstItem="ZXx-jc-WZd" firstAttribute="bottom" secondItem="O5B-49-pMM" secondAttribute="bottom" id="OdE-5j-tWx"/>
+                            <constraint firstItem="ZXx-jc-WZd" firstAttribute="leading" secondItem="O5B-49-pMM" secondAttribute="leading" id="a8H-nS-y4S"/>
+                            <constraint firstItem="ZXx-jc-WZd" firstAttribute="trailing" secondItem="O5B-49-pMM" secondAttribute="trailing" id="zOO-Lr-BaP"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Summary" image="newspaper" catalog="system" selectedImage="newspaper" id="m3Q-Qx-Bk8"/>
@@ -408,7 +422,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nPw-Ne-gln" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1565" y="948"/>
+            <point key="canvasLocation" x="-1565.217391304348" y="947.54464285714278"/>
         </scene>
         <!--Profile-->
         <scene sceneID="6UQ-Qx-TS2">
@@ -441,7 +455,7 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nadia (25 y.o)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HX8-Rw-pfw">
-                                <rect key="frame" x="113.66666666666669" y="150.66666666666666" width="128" height="26"/>
+                                <rect key="frame" x="113.66666666666667" y="150.66666666666666" width="133.66666666666663" height="26"/>
                                 <fontDescription key="fontDescription" name="SFProRounded-Regular" family="SF Pro Rounded" pointSize="22"/>
                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -453,7 +467,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L1Y-qH-YWX">
-                                <rect key="frame" x="112" y="204.66666666666666" width="100" height="34"/>
+                                <rect key="frame" x="112" y="204.66666666666666" width="106.33333333333331" height="34"/>
                                 <color key="backgroundColor" white="0.67119655479999996" alpha="0.54042053219999997" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
