--- a/WabiSabiTeamProject/Feature/Summary/View/SummaryCalendar/DayCollectionViewCell.xib
+++ b/WabiSabiTeamProject/Feature/Summary/View/SummaryCalendar/DayCollectionViewCell.xib
@@ -8,28 +8,23 @@
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <array key="SF-Pro-Rounded-Semibold.otf">
-            <string>SFProRounded-Semibold</string>
-        </array>
-    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="calendarDayCollectionViewCell" id="gTV-IL-0wX" customClass="DayCollectionViewCell" customModule="WabiSabiTeamProject" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="110" height="110"/>
+            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="110" height="110"/>
+                <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="dyM-u9-sbe" customClass="CircularProgressBarCalendar" customModule="WabiSabiTeamProject" customModuleProvider="target">
-                        <rect key="frame" x="5" y="5" width="100" height="100"/>
+                        <rect key="frame" x="5" y="5" width="90" height="90"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iNq-AG-Yyy">
-                        <rect key="frame" x="44" y="43" width="22.5" height="24"/>
-                        <fontDescription key="fontDescription" name="SFProRounded-Semibold" family="SF Pro Rounded" pointSize="20"/>
+                        <rect key="frame" x="12" y="12" width="76" height="76"/>
+                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -38,9 +33,13 @@
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
+                <constraint firstItem="iNq-AG-Yyy" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="12" id="84E-wW-zzn"/>
+                <constraint firstAttribute="bottom" secondItem="iNq-AG-Yyy" secondAttribute="bottom" constant="12" id="AxF-wL-mFh"/>
+                <constraint firstAttribute="trailing" secondItem="iNq-AG-Yyy" secondAttribute="trailing" constant="12" id="BSG-7L-J28"/>
                 <constraint firstItem="dyM-u9-sbe" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="Png-Ma-7rp"/>
                 <constraint firstItem="dyM-u9-sbe" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="5" id="f8j-Oz-muW"/>
                 <constraint firstAttribute="bottom" secondItem="dyM-u9-sbe" secondAttribute="bottom" constant="5" id="o6Z-fa-Tpr"/>
+                <constraint firstItem="iNq-AG-Yyy" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="12" id="oIe-CL-a9p"/>
                 <constraint firstItem="iNq-AG-Yyy" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="oY5-Cc-j5j"/>
                 <constraint firstItem="iNq-AG-Yyy" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="osa-jS-9WF"/>
                 <constraint firstAttribute="trailing" secondItem="dyM-u9-sbe" secondAttribute="trailing" constant="5" id="sTl-cU-FKb"/>
@@ -50,7 +49,7 @@
                 <outlet property="circularProgressView" destination="dyM-u9-sbe" id="18t-Gj-Xle"/>
                 <outlet property="labelDate" destination="iNq-AG-Yyy" id="fLR-eI-mXg"/>
             </connections>
-            <point key="canvasLocation" x="44.20289855072464" y="-1.6741071428571428"/>
+            <point key="canvasLocation" x="43.478260869565219" y="-2.0089285714285712"/>
         </collectionViewCell>
     </objects>
     <resources>
