--- a/WabiSabiTeamProject/Feature/Summary/View/SummaryActivity/SummaryActivityCircularProgressTableViewCell.xib
+++ b/WabiSabiTeamProject/Feature/Summary/View/SummaryActivity/SummaryActivityCircularProgressTableViewCell.xib
@@ -18,7 +18,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="369"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ACTIVITY" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Du9-nh-tFS">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="ACTIVITY" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Du9-nh-tFS">
                         <rect key="frame" x="15" y="0.0" width="290" height="17"/>
                         <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                         <nil key="textColor"/>
@@ -39,13 +39,23 @@
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </collectionView>
+                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="There is no data available" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dlb-n0-Zqp">
+                        <rect key="frame" x="46" y="17" width="228" height="341"/>
+                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
+                    <constraint firstItem="dlb-n0-Zqp" firstAttribute="top" secondItem="Du9-nh-tFS" secondAttribute="bottom" id="58E-yo-q3G"/>
                     <constraint firstItem="Du9-nh-tFS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="Awd-VO-Z6a"/>
                     <constraint firstItem="sdb-jn-WM9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="DFd-Fo-aXW"/>
                     <constraint firstAttribute="bottom" secondItem="sdb-jn-WM9" secondAttribute="bottom" constant="15" id="Fsi-0x-Ndv"/>
                     <constraint firstItem="Du9-nh-tFS" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="TAn-yh-ZRx"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="dlb-n0-Zqp" secondAttribute="bottom" id="X5W-yy-q2z"/>
+                    <constraint firstItem="dlb-n0-Zqp" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="30" id="beL-tB-W9j"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="dlb-n0-Zqp" secondAttribute="trailing" constant="30" id="cO7-fI-qeK"/>
                     <constraint firstAttribute="trailing" secondItem="sdb-jn-WM9" secondAttribute="trailing" constant="15" id="i7J-gc-K8J"/>
                     <constraint firstItem="sdb-jn-WM9" firstAttribute="top" secondItem="Du9-nh-tFS" secondAttribute="bottom" constant="15" id="nh8-gn-1ms"/>
                     <constraint firstAttribute="trailing" secondItem="Du9-nh-tFS" secondAttribute="trailing" constant="15" id="zTJ-1a-nvw"/>
@@ -58,6 +68,7 @@
             </userDefinedRuntimeAttributes>
             <connections>
                 <outlet property="collectionView" destination="sdb-jn-WM9" id="nuD-7Z-Q9a"/>
+                <outlet property="noDataLabel" destination="dlb-n0-Zqp" id="0ua-7M-oQP"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="197.87946428571428"/>
         </tableViewCell>
